examples/10-argocd/rendered-dir/redis/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-redis
  namespace: argocd
  labels:
    app.kubernetes.io/name: argocd-redis
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/component: redis
    app.kubernetes.io/managed-by: ktpl
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/version: v3.5.3
  annotations:
    ktpl.io/rendered: '{"metadata.labels[''app.kubernetes.io/version'']":1,"spec.template.metadata.labels[''app.kubernetes.io/version'']":1,"spec.template.spec.containers[0].image":1,"spec.template.spec.containers[0].imagePullPolicy":1}'
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-redis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argocd-redis
        app.kubernetes.io/instance: argocd
        app.kubernetes.io/component: redis
        app.kubernetes.io/managed-by: ktpl
        app.kubernetes.io/part-of: argocd
        app.kubernetes.io/version: v3.5.3
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 999
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 30
      serviceAccountName: default
      automountServiceAccountToken: true
      containers:
        - name: redis
          image: ecr-public.aws.com/docker/library/redis:8.6.4-alpine
          imagePullPolicy: IfNotPresent
          args:
            - --save
            - ""
            - --appendonly
            - "no"
            - --requirepass $(REDIS_PASSWORD)
          ports:
            - name: redis
              containerPort: 6379
              protocol: TCP
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /health
              name: health
      nodeSelector:
        kubernetes.io/os: linux
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: argocd-redis
                topologyKey: kubernetes.io/hostname
      volumes:
        - name: health
          configMap:
            name: argocd-redis-health-configmap
            defaultMode: 493
      dnsPolicy: ClusterFirst
