examples/10-argocd/rendered-dir/redis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-redis
  namespace: argocd
  labels:
    app.kubernetes.io/name: argocd-redis
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/component: redis
    app.kubernetes.io/managed-by: ktpl
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/version: v3.5.3
  annotations:
    ktpl.io/rendered: '{"metadata.labels[''app.kubernetes.io/version'']":1}'
spec:
  ports:
    - name: redis
      port: 6379
      targetPort: redis
  selector:
    app.kubernetes.io/name: argocd-redis
    app.kubernetes.io/instance: argocd
