examples/10-argocd/rendered-dir/redis/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/name: argocd-redis
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/component: redis
    app.kubernetes.io/managed-by: ktpl
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/version: v3.5.3
  name: argocd-redis
  namespace: argocd
  annotations:
    ktpl.io/rendered: '{"metadata.labels[''app.kubernetes.io/version'']":1}'
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: argocd-server
              app.kubernetes.io/instance: argocd
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: argocd-repo-server
              app.kubernetes.io/instance: argocd
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: argocd-application-controller
              app.kubernetes.io/instance: argocd
      ports:
        - port: redis
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-redis
      app.kubernetes.io/instance: argocd
  policyTypes:
    - Ingress
